# rpgm-decrypt

./: .gitattributes  .gitignore  .gitlab-ci.yml  AUDIT_2026-06-28.md  CONTRIBUTING.md  LICENSE  README.md  sonar-project.properties
.github/workflows/: ci.yml  release.yml
docs/: PROJECT_OVERVIEW.md  THEORY.md
fsharp/src/: Directory.Build.props
fsharp/src/RpgmDecrypt.Cli/: Program.fs
fsharp/src/RpgmDecrypt.Core/: Format.Mz.fs  Format.Vx.fs  Format.VxAce.fs  Format.fs  Log.fs  RgssadCore.fs  RpgmDecrypt.Core.fsproj  VxAceKey.fs  Walk.fs
fsharp/src/RpgmDecrypt.Tests/: EndToEndRealFixtureTests.fs  FormatMvTests.fs  FormatMzTests.fs  FormatVxTests.fs  Generator.fs  KeyDiscoveryTests.fs  RpgmDecrypt.Tests.fsproj  TypesTests.fs
ocaml/: .gitignore  MUTATION_REPORT.md  README.md  dune  rpgm-decrypt.opam  rpgm-decrypt.opam.locked
ocaml/coverage/: coverage.cobertura.xml  summary.txt
ocaml/coverage/html/lib/: crypto.ml.html  dispatch.ml.html  io.ml.html  key_discovery.ml.html  log.ml.html  mv.ml.html  mz.ml.html  report.ml.html  rgssad_core.ml.html  types.ml.html  vx.ml.html  vxace.ml.html  vxace_key.ml.html  walk.ml.html  xp.ml.html
ocaml/fuzz/: dune  fuzz.ml
ocaml/lib/: crypto.ml  crypto.mli  dispatch.ml  dispatch.mli  dune  io.ml  io.mli  key_discovery.ml  key_discovery.mli  log.ml  log.mli  mv.ml  mv.mli  mz.ml  mz.mli  report.ml  report.mli  rgssad_core.ml  rgssad_core.mli  types.ml  types.mli  vx.ml  vx.mli  vxace.ml  vxace.mli  vxace_key.ml  vxace_key.mli  walk.ml  walk.mli  xp.ml  xp.mli
ocaml/proofs/: README.md  proof_output.txt  rpgm_proof.mlw
ocaml/test/: dune  test.ml
ocaml/test/prop/: dune  prop.ml
packaging/: decrypt.bat
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json  vercel.json
site/src/components/: BlackHole.astro  DownloadBlock.astro  Footer.astro  Nav.astro  ProductCard.astro  Roadmap.astro  Sequence.astro  VideoHero.astro
site/src/data/: products.ts
site/src/layouts/: Base.astro
site/src/pages/: index.astro
site/src/styles/: base.css  (+2 more)
src/: Directory.Build.props  RpgmDecrypt.slnx
src/RpgmDecrypt.Cli/: Program.fs  RpgmDecrypt.Cli.fsproj
src/RpgmDecrypt.Core/: Crypto.fs  Format.Mv.fs  Format.Vx.fs  Format.VxAce.fs  Format.Xp.fs  Format.fs  KeyDiscovery.fs  Log.fs  Report.fs  RpgmDecrypt.Core.fsproj  Types.fs  VxAceKey.fs
src/RpgmDecrypt.Tests/: CryptoTests.fs  EndToEndRealFixtureTests.fs  EndToEndTests.fs  Fixtures.fs  FormatMzTests.fs  FormatVxAceTests.fs  FormatXpTests.fs  KeyDiscoveryTests.fs  Main.fs  RpgmDecrypt.Tests.fsproj  TestFramework.fs
(+2 files in other folders)
