opam-version: "2.0"
synopsis: "RPG Maker archive/asset decryptor (OCaml)"
description: """
OCaml implementation of rpgm-decrypt: decrypts RPG Maker XP/VX/VX Ace/MV/MZ
archives and assets. Library [rpgm] + CLI [rpgm-decrypt]."""
maintainer: "rpgm-decrypt"
authors: "rpgm-decrypt"
license: "Apache-2.0"
homepage: "https://gitlab.com/zet-group1/rpgm-decrypt"
bug-reports: "https://gitlab.com/zet-group1/rpgm-decrypt/-/issues"
dev-repo: "git+https://gitlab.com/zet-group1/rpgm-decrypt.git"
depends: [
  "dune" {>= "3.0"}
  "camlzip" {>= "1.10"}
  "yojson" {>= "3.0"}
  "re" {>= "1.10"}
  "qcheck" {with-test & >= "0.91"}
  "gospel" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "exec" "-p" name "test/test.exe"]
  ["dune" "exec" "-p" name "test/prop/prop.exe"]
]
flags: [ avoid-double-ci ]
