; AFL-instrumented fuzz target. Built with -afl-instrument so afl-fuzz gets
; coverage feedback (coverage-guided). Runs standalone too (instrumentation is
; a no-op when not under afl-fuzz).

(executable
 (name fuzz)
 (libraries rpgm unix)
 (flags
  (:standard
   -w
   +a-4-40-42-44-45-70
   -strict-sequence
   -strict-formats
   -principal))
 (ocamlopt_flags
  (:standard -afl-instrument)))
